# smtp-connection-monitor

./: Makefile.am  autogen.sh  config_file  configure.ac
src/: Makefile.am  client.c  main.c
src/includes/: XKConfig.c  XKConfig.h  stubtypes.h
stub-load-monitor/: .screenrc  README
stub-load-monitor/src/: client.c  main.c
stub-load-monitor/src/includes/: Makefile.am  XKSignals.c  XKSignals.h  stubtypes.h
stub-load-monitor/templates/: c  h
